tests/agl/rejections/scope/assign_to_let.agl
let stable = 1
stable := 2
